--- a/website/index.html
+++ b/website/index.html
@@ -8,7 +8,7 @@
         <div class="wrapper">
             <!-- <h1>SNAPCAT</h1>  -->
             <img id="snapcat-title" src="static/snapcat_black.png"></img>
-            <h2>Get your daily dose!</h2>
+            <h2>Get your daily dose of cat!</h2>
             <div class="input-group username">
                   <input type="text" class="form-control username-input" placeholder="Enter your snapchat username!" name="username" id="username">
                   <div class="input-group-btn">
