--- a/website/index.html
+++ b/website/index.html
@@ -8,12 +8,18 @@
         <div class="wrapper">
             <!-- <h1>SNAPCAT</h1>  -->
             <img id="snapcat-title" src="static/snapcat_black.png"></img>
-            <h2>Get your daily dose of cat!</h2>
+            <div class="instructions">
+                 1. ENTER YOUR SNAPCHAT USERNAME
+                <br>
+                 2. GET DAILY SNAPCHATS OF CATS
+                <br>
+                 3. ???
+            </div>
             <div class="input-group username">
-                  <input type="text" class="form-control username-input" placeholder="Enter your snapchat username!" name="username" id="username">
-                  <div class="input-group-btn">
-                    <button class="btn btn-default" type="submit">Subscribe</button>
-                  </div>
+                <input type="text" class="form-control username-input" placeholder="Snapchat username" name="username" id="username">
+            </div>
+            <div>
+                <button class="btn subscribe">SUBSCRIBE</button>
             </div>
         </div>
         <div class="footer">
@@ -21,6 +27,7 @@
                 <li id="ghost"></li>
                 <li><a href="about">ABOUT</a></li>
                 <li><a href="snapchat">SNAPCHAT</a></li>
+                <li><a href="">UNSUBSCRIBE</a></li>
             </ul>
         </div>
     </body>
